Fix tests for Java 8