@@ -1,6 +1,5 @@
 package org.codinjutsu.tools.jenkins.security;
 
-import com.github.cliftonlabs.json_simple.Jsoner;
 import com.intellij.mock.MockVirtualFile;
 import com.intellij.openapi.vfs.VirtualFile;
 import org.apache.commons.httpclient.methods.PostMethod;
@@ -16,12 +15,9 @@ import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
 import java.io.IOException;
-import java.lang.reflect.Field;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
-
-import static org.junit.Assert.*;
 
 public class DefaultSecurityClientTest {
 
@@ -36,7 +32,7 @@ public class DefaultSecurityClientTest {
     @Test
     public void createPostWithOneFileAndOneStringParameter() throws IOException {
         final VirtualFile virtualFile = new MockVirtualFile("sampleFile.md");
-        final PostMethod post = securityClient.createPost("http://example.org", List.of(new StringParameter("test", "Jenkins"),
+        final PostMethod post = securityClient.createPost("http://example.org", Arrays.asList(new StringParameter("test", "Jenkins"),
                 new FileParameter("fileParam", virtualFile)));
         Assertions.assertThat(post.getRequestEntity()).isNotNull();
         Assertions.assertThat(post.getRequestEntity()).isInstanceOf(MultipartRequestEntity.class);
@@ -54,7 +50,7 @@ public class DefaultSecurityClientTest {
     @Test
     public void createPostWithFileNameProvider() throws IOException {
         final VirtualFile virtualFile = new MockVirtualFile("sampleFile.md");
-        final PostMethod post = securityClient.createPost("http://example.org", List.of(new StringParameter("test", "Jenkins"),
+        final PostMethod post = securityClient.createPost("http://example.org", Arrays.asList(new StringParameter("test", "Jenkins"),
                 new FileParameter("fileParam", virtualFile, () -> "file0")));
         Assertions.assertThat(post.getRequestEntity()).isNotNull();
         Assertions.assertThat(post.getRequestEntity()).isInstanceOf(MultipartRequestEntity.class);
@@ -72,7 +68,7 @@ public class DefaultSecurityClientTest {
     @Test
     public void createPostWithOTwoStringParameter() throws IOException {
         final VirtualFile virtualFile = new MockVirtualFile("sampleFile.md");
-        final List<RequestData> requestData = List.of(new StringParameter("test", "Jenkins"),
+        final List<RequestData> requestData = Arrays.asList(new StringParameter("test", "Jenkins"),
                 new StringParameter("second", "more"));
         final PostMethod post = securityClient.createPost("http://example.org", requestData);
         Assertions.assertThat(post.getRequestEntity()).isNotNull();
